<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/profile"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_airport_shuttle_black_24dp"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/money"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Management">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/disable"
                android:title="@string/disable_acc" />
        </menu>
    </item>

</menu>
